fix paragraph spacing

--- a/src/style/global.css
+++ b/src/style/global.css
@@ -29,14 +29,6 @@ a, button {
     cursor: pointer;
 }
 
-p {
-    margin-block-start: 0;
-    margin-block-end: 0;
-
-    padding-block-start: 1em;
-    padding-block-end: 1em;
-}
-
 p > a {
     position: relative;
 
